# COM_rospack

./: README.md
cpp/: C++接口使用说明.docx  Readme.txt  example_recieve.cpp  example_send.cpp  receiver_test  recieve  send  sender_test
multireceive/: CMakeLists.txt  package.xml
multireceive/src/: multireceive.cpp
multisend_20/: CMakeLists.txt  package.xml
multisend_20/include/multisend_20/: serial_driver.h
multisend_20/src/: multisend_20.cpp
py/: Python接口使用说明.docx  UAV_interface.py  main_receive.py  main_send.py  test.py  test2.py
receive_mc/: CMakeLists.txt  package.xml
receive_mc/src/: receive_mc.cpp
send_mc/: CMakeLists.txt  package.xml
send_mc/src/: send_mc.cpp
